--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import "abstracts/functions";
+  @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
@@ -10,5 +10,6 @@
 @import "components/button";
 
 @import "layout/header";
+@import "layout/grid";
 
 @import "pages/home";
