Fixed small issue on css class

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
 .heading-terciary {
   font-size: 1.6rem;
   font-weight: 700;
-  transform: uppercase; }
+  text-transform: uppercase; }
 
 .paragraph {
   font-size: 1.6rem; }
