--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -57,7 +57,7 @@ body {
 .heading-terciary{
     font-size: 1.6rem;
     font-weight: 700;
-    transform: uppercase;
+    text-transform: uppercase;
 }
 
 .paragraph{
