--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-  @import "abstracts/functions";
+@import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/card";
 @import "components/composition";
 @import "components/feature-box";
 
