Added media queries for tablets and phones

--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -28,6 +28,11 @@
     &__left{
         width: 33.333333%;
         display: table-cell;
+
+        @include respond(phone){
+            width: 0;
+            display: none;
+        }
     }
 
     &__right{
@@ -35,6 +40,12 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(phone){
+            width: 100%;
+            display: block;
+            padding: 1rem 3rem;
+        }
     }
 
     &__img{
@@ -57,6 +68,10 @@
         -moz-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
+
+        @include respond(phone){
+            column-count: 0;
+        }
     }
 
     //OPEN STATE
@@ -82,6 +97,11 @@
             display: inline-block;
             transition: all .2s;
             line-height: 1;
+
+            @include respond(tab-port){
+                top: .5rem;
+                right: .5rem;
+            }
         }
 
         &:hover{
