--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
     /*font-size: 16px;*/
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary{
@@ -23,6 +22,11 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
 
     &--sub{
@@ -33,7 +37,10 @@ body {
     
     
         animation: moveInRight 1s ease-out;
-        /*animation-delay: 1s;*/
+        
+        @include respond(phone){
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -47,6 +54,15 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+
+    //phone is smaller so it comes after the tablet
+    @include respond(phone){
+        font-size:2.5rem ;
+    }
 
     &:hover{
         transform: skewY(2deg) skewX(25deg) scale(1.1);
