--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,12 +4,23 @@
         to right bottom,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)), 
-     url(../img/hero.jpg);
+     url(../img/hero-small.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+
+    //responsive css images for high resolution screens
+    @media (min-resolution: 192dpi) and (min-width: 37.5em /*600px converted to em*/),
+        (min-width: 125em /*2000px converted to em*/){
+        background-image: linear-gradient(
+            to right bottom,
+            rgba($color-primary-light, 0.8),
+            rgba($color-primary-dark, 0.8)), 
+         url(../img/hero.jpg);
+    }
 
     @include respond(phone){
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
